fix(proc-bottom-toggle): move the button to avoid overlapping
Related to CAM-6330

--- a/webapps/ui/cockpit/client/styles/ctn.less
+++ b/webapps/ui/cockpit/client/styles/ctn.less
@@ -258,14 +258,14 @@ a.expand-collapse {
   }
 
   &.vertical-collapse {
-    border-width: 1px 1px 0 0;
-    border-radius: 0 4px 0 0;
+    border-width: 1px 1px 0 1px;
+    border-radius: 4px 4px 0 0;
     top: auto;
     bottom: 0;
-    left: 0;
+    left: 25px;
     &.show-collapsable {
-      border-width: 0 1px 1px 0;
-      border-radius: 0 0 4px 0;
+      border-width: 0 1px 1px 1px;
+      border-radius: 0 0 4px 4px;
       top: 0;
       bottom: auto;
     }
